HtmlGeneratorService changed